--- a/zjb/Tpl/Home/Index/index.html
+++ b/zjb/Tpl/Home/Index/index.html
@@ -28,13 +28,16 @@
           <volist name="list" id="vo">
             <li class="span3">
               <div class="thumbnail">
-                <a  href="{:U('Home/Company/company')}#desc"><img src="" alt=""></a>
+                <a  href="{:U('company/'.$vo['id'])}"><img src='__ROOT__/{$vo.logo}' alt="暂无logo"></a>
                 <div class="caption">
-                  <h3  style="text-align: center;">{$vo.id}</h3>
-                  <p><span>{$vo.id}</span>&nbsp&nbsp &nbsp <span>{$vo.id}</span></p>
-                  <p><span>{$vo.id} </span>&nbsp&nbsp &nbsp <span>{$vo.id}</span></p>
-                  <p><span>{$vo.id}</span>&nbsp&nbsp &nbsp <span>{$vo.id}</span></p>
-                  <p style="text-align: center;"><a href="#" class="btn btn-primary">推荐</a> <a href="#" class="btn">评论</a></p>
+                  <h3  style="text-align: center;">{$vo.name}</h3>
+                  <p><span>地址：</span>&nbsp&nbsp &nbsp <span>{$vo.address}</span></p>
+                  <p><span>主营： </span>&nbsp&nbsp &nbsp <span>{$vo.business}</span></p>
+                  <p><span>联系人：</span><span>{$vo.username}</span>&nbsp&nbsp &nbsp <span>手机：</span><span>{$vo.mobile}</span></p>
+                  <p style="text-align: center;">
+                    <a href="__SELF__/zan/{$vo['id']}"  class="btn btn-primary">推荐</a> 
+                    <a href="#" class="btn">评论</a>
+                  </p>
                 </div>
               </div>
             </li>
@@ -42,6 +45,8 @@
         </ul>
       </div>
     </div>
-    <div class="yahoo2">{$page}</div>
+    <div class="yahoo2">
+      {$page}
+    </div>
 </body>
 </html>
