fix case problem

--- a/zjb/Tpl/Home/Publish/hypublishcar.html
+++ b/zjb/Tpl/Home/Publish/hypublishcar.html
@@ -383,8 +383,8 @@ border:1px;
   </form>
 </div>
 </div>
-	<js href="__ROOT__/public/js/edit.js" />
-	<js href="__ROOT__/public/js/artDialog.min.js" />
+	<js href="__ROOT__/Public/js/edit.js" />
+	<js href="__ROOT__/Public/js/artDialog.min.js" />
 
 
 </body>
