--- a/zjb/Tpl/Home/Publish/publishcar.html
+++ b/zjb/Tpl/Home/Publish/publishcar.html
@@ -376,7 +376,7 @@ border:1px;
   </form>	
 </div>
 </div>
-<js href="__ROOT__/public/js/edit.js" />
-	<js href="__ROOT__/public/js/artDialog.min.js" />
+<js href="__ROOT__/Public/js/edit.js" />
+	<js href="__ROOT__/Public/js/artDialog.min.js" />
 </body>
 </html>
