done mulitphoto upload and preview

--- a/zjb/Tpl/Home/Navigation/Lgnavigation.html
+++ b/zjb/Tpl/Home/Navigation/Lgnavigation.html
@@ -7,6 +7,6 @@
 				<li><a href="{:U('Zhucar/zhucar')}#desc">我要租车</a></li>
 				<li><a href="{:U('Daikuang/daikuang')}#desc">我要贷款</a></li>
 				<li><a href="{:U('Licai/licai')}#desc">我要理财</a></li>&nbsp&nbsp&nbsp&nbsp&nbsp
-				<li class="navbar-right" style="text-align:right;"><a href="{:U('Publish/publish')}#desc">我要登记</a></li>
+				<li class="navbar-right" style="text-align:right;"><a href="{:U('Publish/index')}">我要登记</a></li>
 			</ul>
 		</div>
