finish rent house and buyhouse

--- a/zjb/Tpl/Home/Company/company.html
+++ b/zjb/Tpl/Home/Company/company.html
@@ -47,7 +47,7 @@
 					<volist name="list" id="vo">
 					<li class="span30">
 					  <div class="thumbnail">
-						<a href="{:U('Home/Innerpage/innerpage')}#desc" target="_blank"><img src="http://placehold.it/260x180" alt=""></a>
+						<a href="{:U('Home/Innerpage/innerpage')}" target="_blank"><img src="http://placehold.it/260x180" alt=""></a>
 						<div class="caption">
 						 <h3  style="text-align: center;">{$vo.id}</h3>
 							<p><span>{$vo.id}</span>&nbsp&nbsp &nbsp <span>{$vo.id}</span></p>
