--- a/zjb/Tpl/Home/Navigation/Lgnavigation.html
+++ b/zjb/Tpl/Home/Navigation/Lgnavigation.html
@@ -1,12 +1,12 @@
 		<div>
 			<ul class="nav nav-tabs navbar nav1">
-				<li class="active"><a href="{:U('Index/index')}#desc">合作商家</a></li>
-				<li><a href="{:U('Buyhouse/buyhouse')}#desc">我要买房</a></li>
-				<li><a href="{:U('Zhuhouse/zhuhouse')}#desc">我要租房</a></li>
-				<li><a href="{:U('Buycar/buycar')}#desc">我要买车</a></li>
-				<li><a href="{:U('Zhucar/zhucar')}#desc">我要租车</a></li>
-				<li><a href="{:U('Daikuang/daikuang')}#desc">我要贷款</a></li>
-				<li><a href="{:U('Licai/licai')}#desc">我要理财</a></li>&nbsp&nbsp&nbsp&nbsp&nbsp
+				<li class="active"><a href="{:U('Index/index')}">合作商家</a></li>
+				<li><a href="{:U('Buyhouse/index')}">我要买房</a></li>
+				<li><a href="{:U('Renthouse/index')}">我要租房</a></li>
+				<li><a href="{:U('Buycar/index')}">我要买车</a></li>
+				<li><a href="{:U('Rentcar/index')}">我要租车</a></li>
+				<li><a href="{:U('Loan/index')}">我要贷款</a></li>
+				<li><a href="{:U('Invest/index')}">我要理财</a></li>&nbsp&nbsp&nbsp&nbsp&nbsp
 				<li class="navbar-right" style="text-align:right;"><a href="{:U('Publish/index')}">我要登记</a></li>
 			</ul>
 		</div>
