--- a/zjb/Tpl/Home/Banner/Combanner.html
+++ b/zjb/Tpl/Home/Banner/Combanner.html
@@ -3,10 +3,10 @@
 		 </div>
 		 <div id="banner">
 			<ul class="nav nav-pills">
-			  <li class="active"><a href="{:U('Home/Company/company')}#desc">首页</a></li>
-			  <li><a href="{:U('Home/New/new1')}#desc">新闻广告</a></li>
-			  <li><a href="{:U('Home/Answers/answers')}#desc">咨询答疑</a></li>
-			  <li><a href="{:U('Home/Introduce/introduce')}#desc">公司介绍</a></li>
+			  <li class="active"><a href="{:U('Home/Company/company')}">首页</a></li>
+			  <li><a href="{:U('Home/New/new1')}">新闻广告</a></li>
+			  <li><a href="{:U('Home/Answers/answers')}">咨询答疑</a></li>
+			  <li><a href="{:U('Home/Introduce/introduce')}">公司介绍</a></li>
 			</ul>
 		</div>
 
