--- a/zjb/Tpl/Home/Index/login.html
+++ b/zjb/Tpl/Home/Index/login.html
@@ -20,7 +20,7 @@
 </head>
 <body style="background-color:#e7ebea;">
   <div id="container">
-    <form name="submitForm" method="post" action="{:U('Index/login')}" id="submitForm" target="formSubmit">
+    <form name="submitForm" method="post" action="{:U('Index/login')}" id="submitForm" >
 
       <include file="Common:top"/>
       <include file="./zjb/Tpl/Home/Banner/Lgbanner.html"/>
