--- a/zjb/Tpl/Publish/invest.html
+++ b/zjb/Tpl/Publish/invest.html
@@ -1,169 +1,159 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-<title>
-发布理财
-</title>
-<include file="./zjb/Tpl/Injection/injection.html"/>
-<!--[if lte IE 6]>
-<!-- bsie css 补丁文件 -->
-<link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap-ie6.css"/>
-<!-- bsie 额外的 css 补丁文件 -->
-<link rel="stylesheet" href="__ROOT__/Public/dist/css/ie.css"/>
- <![endif]-->
-<!-- Optional theme -->
-<link rel="stylesheet" href="__ROOT__/Public/Home/publish.css" type="text/css" />
-<link rel="stylesheet" href="__ROOT__/Public/Home/form.css" type="text/css" />
-<link rel="stylesheet" href="__ROOT__/Public/Home/edit.css" type="text/css" />
+    <head>
+        <title>
+            发布理财信息
+        </title>
+    <include file="./zjb/Tpl/Injection/injection.html"/>
+    <!--[if lte IE 6]>
+    <!-- bsie css 补丁文件 -->
+    <link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap-ie6.css"/>
+    <!-- bsie 额外的 css 补丁文件 -->
+    <link rel="stylesheet" href="__ROOT__/Public/dist/css/ie.css"/>
+    <![endif]-->
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="__ROOT__/Public/Home/publish.css" type="text/css" />
+    <link rel="stylesheet" href="__ROOT__/Public/Home/form.css" type="text/css" />
+    <style type="text/css">
+        *:focus {outline: none}
 
-
-
-<style type="text/css">
-*:focus {outline: none}
-
-
-tr,td{font-size:15px;
-color:#000000;
-background:#fff;
-border:1px;
-}
-#login-header{
-	float:left;
-	font:15px;
-}
-#cityname{
-	float:left;
-}
-</style>
-
-
-
+        tr,td{font-size:15px;
+              color:#000000;
+              background:#fff;
+              border:1px;
+        }
+    </style>
 </head>
 <body style="background-color:#e7ebea;">
-<div id="container">
-	<include file="./zjb/Tpl/Header/header.html"/>
-	<include file="./zjb/Tpl/Banner/Lgbanner.html"/>
-    <include file="./zjb/Tpl/Navigation/Lgnavigation.html"/>			
-<div id="main">
-	  <form class="form-horizontal pull-left">
-		<fieldset style="width:720px;margin:0px auto;height:100%;background:#fff">
-		  <div id="legend" class="">
-			<legend class="">理财发布</legend>
-		  </div>
-		  <div class="control-group">
-			  <!-- Text input-->
-			  <label class="control-label" for="input01">名称</label>
-			  <div class="controls">
-				<input type="text" placeholder="placeholder" class="input-xlarge">
-				<p class="help-block"></p>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Select Basic -->
-			  <label class="control-label">类型</label>
-			  <div class="controls">
-				<select class="input-xlarge">
-				  <option>个人借款</option>
-				  <option>银行借款</option>
-				  <option>企业借款</option>
-				</select>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Text input-->
-			  <label class="control-label" for="input01">公司名</label>
-			  <div class="controls">
-				<input type="text" placeholder="placeholder" class="input-xlarge">
-				<p class="help-block"></p>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Select Basic -->
-			  <label class="control-label">抵押物</label>
-			  <div class="controls">
-				<select class="input-xlarge">
-				  <option>有</option>
-				  <option>无</option>
-				</select>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Text input-->
-			  <label class="control-label" for="input01">利率</label>
-			  <div class="controls">
-				<input type="text" placeholder="placeholder" class="input-xlarge">
-				<p class="help-block"></p>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Select Basic -->
-			  <label class="control-label">还款方式</label>
-			  <div class="controls">
-				<select class="input-xlarge">
-				  <option>到期付款</option>
-				  <option>面议</option>
-				</select>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Text input-->
-			  <label class="control-label" for="input01">手续费</label>
-			  <div class="controls">
-				<input type="text" placeholder="placeholder" class="input-xlarge">
-				<p class="help-block"></p>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Select Basic -->
-			  <label class="control-label">金额</label>
-			  <div class="controls">
-				<select class="input-xlarge">
-				  <option>10万以下</option>
-				  <option>10-50万</option>
-				  <option>50-100万</option>
-				  <option>100-500万</option>
-				  <option>500万以上</option>
-				</select>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Select Basic -->
-			  <label class="control-label">期限</label>
-			  <div class="controls">
-				<select class="input-xlarge">
-				  <option>1-3个月</option>
-				  <option>4-6个月</option>
-				  <option>7-12个月</option>
-				  <option>一年以上</option>
-				</select>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Text input-->
-			  <label class="control-label" for="input01">联系人</label>
-			  <div class="controls">
-				<input type="text" placeholder="placeholder" class="input-xlarge">
-				<p class="help-block"></p>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <!-- Text input-->
-			  <label class="control-label" for="input01">联系电话</label>
-			  <div class="controls">
-				<input type="text" placeholder="placeholder" class="input-xlarge">
-				<p class="help-block"></p>
-			  </div>
-		  </div>
-		  <div class="control-group">
-			  <label class="control-label"></label>
-			  <!-- Button -->
-			  <div class="controls">
-				<button class="btn btn-default">确认</button>
-			  </div>
-		  </div>
-		</fieldset>
-	  </form>
-  </div>
-</div>	
+    <div id="container" >
+        <include file="Common:top"/>
+        <include file="./zjb/Tpl/Banner/Lgbanner.html"/>
+        <include file="./zjb/Tpl/Navigation/Lgnavigation.html"/>		
+
+        <div id="main">
+            <form class="form-horizontal pull-left" action="{:U('Publish/invest')}" method='post' >
+                <fieldset style="width:700px;margin:0px auto">
+                    <div id="legend" >
+                        <legend class="">理财</legend>
+                    </div>
+                    <div class="control-group" >
+                        <label class="control-label">标题</label>
+                        <div class="controls">
+                            <input name='title' type="text" placeholder="输入嘹亮的信息标题" class="input-xlarge"> 
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">来源</label>
+                        <div class="controls">
+                            <select name="type" class="input-xlarge">
+                                <option value="1">个人借款</option>
+                                <option value="2">企业借款</option>
+                                <option value="3">银行产品</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">抵押物</label>
+                        <div class="controls">
+                            <!-- Inline Radios -->
+                            <label class="radio inline">
+                                <input type="radio" value="1" name="pawn" checked="checked">无
+                            </label>
+                            <label class="radio inline">
+                                <input type="radio" value="2" name="pawn">有
+                            </label>
+                        </div>
+                    </div>
+                    <div class="control-group" >
+                        <!-- Text input-->
+                        <label class="control-label">利率</label>
+                        <div class="controls">
+                            <input name='interest_rate' type="text" class="input-xlarge"> %
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group" >
+                        <label class="control-label">还款方式</label>
+                        <div class="controls">
+                            <input name='refund_way' type="text" class="input-xlarge"> 
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group" >
+                        <label class="control-label">金额</label>
+                        <div class="controls">
+                            <input name='price' type="text" class="input-xlarge">万
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group" >
+                        <!-- Text input-->
+                        <label class="control-label">期限</label>
+                        <div class="controls">
+                            <input name='deadline' type="text"  class="input-xlarge">个月
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    
+                    <div class="control-group">
+                        <!-- Text input-->
+                        <label class="control-label">地址</label>
+                        <div class="controls">
+                            <select name='zone_id' >
+                                <option>选择当前城市的区县</option>
+                                <foreach name='Think.session.city_zones' item='zone'>
+                                    <option value={$zone.id}>{$zone.name}</option>
+                                </foreach>
+                            </select>
+                            <p class="help-block"></p>
+                            <input name='addr' type="text" placeholder="建议地址具体到街道" class="input-xlarge">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <!-- Textarea -->
+                        <label class="control-label">自我推介</label>
+                        <div class="controls">
+                            <div class="textarea">
+                                <textarea name='describe_text' > </textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">上传图片</label>
+                        <!-- File Upload -->
+                        <div class="controls">
+                            <include file='Common:upload_pic' />
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">联系人</label>
+                        <div class="controls">
+                            <input name='contact' type="text" placeholder="" class="input-xlarge">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <!-- Text input-->
+                        <label class="control-label">联系电话</label>
+                        <div class="controls">
+                            <input name='contact_phone' type="text" placeholder="" class="input-xlarge">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <!-- Button -->
+                        <div class="controls">
+                            <button class="btn btn-default">发布</button>
+                            <p class='text-muted'>非认证商家会员发布信息需要通过审核</p>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
