finish info page

--- a/zjb/Tpl/Loan/index.html
+++ b/zjb/Tpl/Loan/index.html
@@ -27,7 +27,7 @@
                     <volist name="list" id="vo">
                         <li class="span3">
                             <div class="thumbnail">
-                                <a  href="{:U('loan/'.$vo['id'])}"><img src='__ROOT__/{$vo.cover}' alt="暂无图片"></a>
+                                <a  href="{:U('loan/'.$vo['info_id'])}"><img src='__ROOT__/{$vo.cover}' alt="暂无图片"></a>
                                 <div class="caption">
                                     <h3  style="text-align: center;">{$vo.title}</h3>
                                     <p><span>来源： {$vo.type}</span>&nbsp&nbsp &nbsp <span>方式： {$vo.loan_way}</span></p>
