--- a/zjb/Tpl/Publish/sellCar.html
+++ b/zjb/Tpl/Publish/sellCar.html
@@ -195,7 +195,7 @@
                     <div class="control-group">
                         <label class="control-label">商业险到期</label>
                         <div class="controls">
-                            <input name="commerical_date" type="text" class="input-xlarge">
+                            <input name="commercial_date" type="text" class="input-xlarge">
                             <p class="help-block"></p>
                         </div>
                     </div>
@@ -218,16 +218,16 @@
                         <label class="control-label">车辆用途性质</label>
                         <div class="controls">
                             <label class="radio inline">
-                                <input type="radio" value="1" name="use">非营运
+                                <input type="radio" value="1" name="useful">非营运
                             </label>
                             <label class="radio inline">
-                                <input type="radio" value="2" name="use">营运
+                                <input type="radio" value="2" name="useful">营运
                             </label>
                             <label class="radio inline">
-                                <input type="radio" value="3" name="use">营转非
+                                <input type="radio" value="3" name="useful">营转非
                             </label>
                             <label class="radio inline">
-                                <input type="radio" value="4" name="use">租赁
+                                <input type="radio" value="4" name="useful">租赁
                             </label>
                         </div>
                     </div>
