--- a/zjb/Tpl/Register/register.html
+++ b/zjb/Tpl/Register/register.html
@@ -19,7 +19,7 @@
 <body style="background-color:#e7ebea;">
 
   <div id="container">
-    <form name="submitForm" method="post" action="{:U('Register/register')}" id="submitForm" target="formSubmit">
+    <form name="submitForm" method="post" action="{:U('Register/register')}" id="submitForm">
       <include file="Common:top"/>
       <include file="./zjb/Tpl/Banner/Lgbanner.html"/>
       <include file="./zjb/Tpl/Navigation/Lgnavigation.html"/>
