--- a/zjb/Tpl/Buycar/index.html
+++ b/zjb/Tpl/Buycar/index.html
@@ -27,7 +27,7 @@
                     <volist name="list" id="vo">
                         <li class="span3">
                             <div class="thumbnail">
-                                <a  href="{:U('buycar/'.$vo['id'])}"><img src='__ROOT__/{$vo.cover}' alt="暂无图片"></a>
+                                <a  href="{:U('buycar/'.$vo['info_id'])}"><img src='__ROOT__/{$vo.cover}' alt="暂无图片"></a>
                                 <div class="caption">
                                     <h3  style="text-align: center;">{$vo.title}</h3>
                                     <p><span>类型： {$vo.type}</span>&nbsp&nbsp &nbsp <span>品牌： {$vo.brand}</span></p>
