finish admin login, make some ajustment for client

--- a/zjb/Tpl/Buycar/index.html
+++ b/zjb/Tpl/Buycar/index.html
@@ -33,7 +33,7 @@
                                     <p><span>类型： {$vo.type}</span>&nbsp&nbsp &nbsp <span>品牌： {$vo.brand}</span></p>
                                     <p><span>里程： {$vo.miles}万公里 </span>&nbsp&nbsp &nbsp <span>保险： {$vo.jiaoqiangxian_date}</span></p>
                                     <p><span>上牌：</span><span>{$vo.year}年</span>&nbsp&nbsp &nbsp <span>售价：</span><span>{$vo.price}万</span></p>
-                                    <p><span>地址： {$vo.address}</span>&nbsp&nbsp &nbsp
+                                    <p><span>{$vo.zone_name}</span>&nbsp&nbsp &nbsp
                                         <span><if condition="$vo.user_type" >{$vo.company_name}<else />个人二手车</if></span>
                                     </p>
                                 </div>
