--- a/zjb/Tpl/Injection/injection.html
+++ b/zjb/Tpl/Injection/injection.html
@@ -1,8 +1,9 @@
 <meta charset="utf-8" />
 <meta name="keywords" content="中介帮 rome 信息发布" />
 <link rel="stylesheet" href="__ROOT__/Public/images/reset.css" type="text/css" />
-<js href="__ROOT__/Public/js/jquery-1.7.1.js" />
-<js href="__ROOT__/Public/dist/js/bootstrap.js" />
+
+<script type="text/javascript" src="__ROOT__/Public/js/jquery-1.7.1.js"></script>
+<script type="text/javascript" src="__ROOT__/Public/dist/js/bootstrap.js"></script>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap.css">
 <!-- Optional theme -->
