--- a/zjb/Tpl/Invest/index.html
+++ b/zjb/Tpl/Invest/index.html
@@ -33,7 +33,7 @@
                                     <p><span>类型： {$vo.type}</span>&nbsp&nbsp &nbsp <span>抵押物： {$vo.pawn}</span></p>
                                     <p><span>利率： {$vo.interest_rate}% </span>&nbsp&nbsp &nbsp <span>还款方式： {$vo.refund_way}</span></p>
                                     <p><span>金额：</span><span>{$vo.price}万元</span>&nbsp&nbsp &nbsp <span>期限：</span><span>{$vo.deadline}个月</span></p>
-                                    <p><span>地址： {$vo.address}</span>&nbsp&nbsp &nbsp
+                                    <p><span>地址： {$vo.zone_name}</span>&nbsp&nbsp &nbsp
                                         <span><if condition="$vo.user_type" >{$vo.company_name}<else />个人信息</if></span>
                                     </p>
                                 </div>
