--- a/zjb/Tpl/Loan/index.html
+++ b/zjb/Tpl/Loan/index.html
@@ -33,7 +33,7 @@
                                     <p><span>来源： {$vo.type}</span>&nbsp&nbsp &nbsp <span>方式： {$vo.loan_way}</span></p>
                                     <p><span>利率： {$vo.interest_rate} </span>&nbsp&nbsp &nbsp <span>手续费： {$vo.charge}</span></p>
                                     <p><span>额度：</span><span>{$vo.price}万元</span>&nbsp&nbsp &nbsp <span>期限：</span><span>{$vo.deadline}个月</span></p>
-                                    <p><span>地址： {$vo.address}</span>&nbsp&nbsp &nbsp
+                                    <p><span>地址： {$vo.zone_name}</span>&nbsp&nbsp &nbsp
                                         <span><if condition="$vo.user_type" >{$vo.company_name}<else />个人信息</if></span>
                                     </p>
                                 </div>
