--- a/zjb/Tpl/Rentcar/index.html
+++ b/zjb/Tpl/Rentcar/index.html
@@ -33,7 +33,7 @@
                                     <p><span>类型： {$vo.type}</span>&nbsp&nbsp &nbsp <span>上牌： {$vo.year}</span></p>
                                     <p><span>日里程： {$vo.miles}公里 </span>&nbsp&nbsp &nbsp <span>保险： {$vo.include_insure}</span></p>
                                     <p><span>押金：</span><span>{$vo.deposit}元</span>&nbsp&nbsp &nbsp <span>租金：</span><span>{$vo.price}元每天</span></p>
-                                    <p><span>地址： {$vo.address}</span>&nbsp&nbsp &nbsp
+                                    <p><span>地址： {$vo.zone_name}</span>&nbsp&nbsp &nbsp
                                         <span><if condition="$vo.user_type" >{$vo.company_name}<else />个人车源</if></span>
                                     </p>
                                 </div>
