--- a/zjb/Tpl/Renthouse/index.html
+++ b/zjb/Tpl/Renthouse/index.html
@@ -33,7 +33,7 @@
                                     <p><span>类型： {$vo.house_kind}</span>&nbsp&nbsp &nbsp <span>面积： {$vo.area}㎡</span></p>
                                     <p><span>楼层： {$vo.floor_of}/{$vo.floors}层 </span>&nbsp&nbsp &nbsp <span>户型： {$vo.rooms}室{$vo.parlors}厅</span></p>
                                     <p><span>装修：</span><span>{$vo.finish_level}</span>&nbsp&nbsp &nbsp <span>租金：</span><span>{$vo.price}元/月</span></p>
-                                    <p><span>地址： {$vo.address}</span>&nbsp&nbsp &nbsp
+                                    <p><span>地址： {$vo.zone_name}</span>&nbsp&nbsp &nbsp
                                         <span><if condition="$vo.user_type" >{$vo.company_name}<else />个人房源</if></span>
                                     </p>
                                 </div>
