--- a/zjb/Tpl/Admin/index.html
+++ b/zjb/Tpl/Admin/index.html
@@ -1,35 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>
-            中介帮管理后台
-        </title>
-        <meta charset="utf-8" />
-        <meta name="keywords" content="中介帮 rome 信息发布" />
-        <script type="text/javascript" src="__ROOT__/Public/js/jquery-1.7.1.js"></script>
-        <script type="text/javascript" src="__ROOT__/Public/dist/js/bootstrap.js"></script>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap.css">
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="__ROOT__/Public/dist/css/bootstrap-theme.css">
-
-    </head>
-    <body>
-    <include file="Admin:nav"/>
-    <div class="container-fluid">
-        <div class="row-fluid wrapper">
-            <div class="span2 sidebar affix " >
-                <include file="Comm:Index:sidebar"/>
+<include file="Admin:header" />
+<include file="Admin:nav"/>
+<div class="container">
+    <div class="jumbotron">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2 class="panel-title">会员概览</h3>
             </div>
-            <div class="span10 pull-right">
-                <div class="content">
-                   
-                </div>
+            <div class="panel-body">
+                <p>总注册会员:<span class="text-danger">{$total_mem}</span>位。其中</p>
+                <p>普通会员:<span class="text-danger">{$common_mem}</span>位。</p>
+                <p>商家会员:<span class="text-danger">{$company_mem}</span>位。</p>
+                <p>通过审核的商家会员:<span class="text-danger">{$unreg_c_mem}</span>位。</p>
             </div>
         </div>
-        <include file="Comm:Index:footer"/>
-        <include file="Comm:Index:modal"/>
-        <include file="Comm:Index:msg"/>
+         <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2 class="panel-title">信息概览</h3>
+            </div>
+            <div class="panel-body">
+                <p>二手车信息:<span class="text-danger">{$sellcar_info}。     </span>租车信息:<span class="text-danger">{$rentcar_info}。  </span></p>
+                <p>卖房信息:<span class="text-danger">{$sellhouse_info}。        </span>租房信息:<span class="text-danger">{$renthouse_info}。  </span></p>
+                <p>贷款信息:<span class="text-danger">{$loan_info}。        </span>理财信息:<span class="text-danger">{$invest_info}。  </span></p>
+            </div>
+        </div>
     </div>
+</div>
 </body>
 </html>
