company_auth on the way

--- a/zjb/Tpl/Admin/index.html
+++ b/zjb/Tpl/Admin/index.html
@@ -10,7 +10,7 @@
                 <p>总注册会员:<span class="text-danger">{$total_mem}</span>位。其中</p>
                 <p>普通会员:<span class="text-danger">{$common_mem}</span>位。</p>
                 <p>商家会员:<span class="text-danger">{$company_mem}</span>位。</p>
-                <p>通过审核的商家会员:<span class="text-danger">{$unreg_c_mem}</span>位。</p>
+                <p>通过审核的商家会员:<span class="text-danger">{$unauth_c_mem}</span>位。</p>
             </div>
         </div>
          <div class="panel panel-primary">
@@ -18,9 +18,9 @@
                 <h2 class="panel-title">信息概览</h3>
             </div>
             <div class="panel-body">
-                <p>二手车信息:<span class="text-danger">{$sellcar_info}。     </span>租车信息:<span class="text-danger">{$rentcar_info}。  </span></p>
-                <p>卖房信息:<span class="text-danger">{$sellhouse_info}。        </span>租房信息:<span class="text-danger">{$renthouse_info}。  </span></p>
-                <p>贷款信息:<span class="text-danger">{$loan_info}。        </span>理财信息:<span class="text-danger">{$invest_info}。  </span></p>
+                <p>二手车信息:<span class="text-danger">{$sellcar_info}</span>条。&nbsp;&nbsp;&nbsp;租车信息:<span class="text-danger">{$rentcar_info}</span>条。</p>
+                <p>卖房信息:<span class="text-danger">{$sellhouse_info}</span>条。&nbsp;&nbsp;&nbsp;租房信息:<span class="text-danger">{$renthouse_info}</span>条。</p>
+                <p>贷款信息:<span class="text-danger">{$loan_info}</span>条。&nbsp;&nbsp;&nbsp;理财信息:<span class="text-danger">{$invest_info}</span>条。</p>
             </div>
         </div>
     </div>
