--- a/zjb/Tpl/Admin/company_auth.html
+++ b/zjb/Tpl/Admin/company_auth.html
@@ -58,6 +58,21 @@
                         <th>操作</th>
                     </tr>
                 </thead>
+                <tbody>
+                    <volist name="list" id="vo">
+                        <tr>
+                            <td>{$i}</td>
+                            <td>{$vo.company_type}</td>
+                            <td>{$vo.name}</td>
+                            <td>{$vo.city_name}</td>
+                            <td>{$vo.address}</td>
+                            <td>{$vo.is_checked}</td>
+                            <td><if condition="$vo.is_verified">通过<else/>未通过</if></td>
+                            <td>    
+                            </td>
+                        </tr>
+                    </volist>
+                </tbody>
             </table>
             <form class='form-inline'>
                 <div class="pagination pagination-centered pagination-large inline">
