--- a/zjb/Tpl/Company/view.html
+++ b/zjb/Tpl/Company/view.html
@@ -1,14 +1,19 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<include file='Admin:header'/>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 col-md-offset-3"
+             <div class="thumbnail">
+                <a  href="{:U('company/'.$vo['id'])}"><img src='__ROOT__/{$vo.logo}' alt="暂无logo"></a>
+                <div class="caption">
+                    <h3  style="text-align: center;">{$vo.name}</h3>
+                    <p><span>地址：</span>&nbsp&nbsp &nbsp <span>{$vo.address}</span></p>
+                    <p><span>主营： </span>&nbsp&nbsp &nbsp <span>{$vo.business}</span></p>
+                    <p><span>联系人：</span><span>{$vo.username}</span>&nbsp&nbsp &nbsp <span>手机：</span><span>{$vo.mobile}</span></p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
